# learnOpenGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
examples/: 00_hello_triangle.cpp  01_shaders.cpp  02_textures.cpp  03_transformations.cpp  04_coordinate_systems.cpp  05_camera.cpp  shader_s.h
examples/shaders/: 02_shader.frag  04_shader.frag  shader.frag
exercises/: 00_triangles.cpp  02_textures.cpp  04_coordinate_systems.cpp
exercises/shaders/: 02_shader.frag  shader.vert
experimental/: GameObject.h  components.h  default_shader.frag  default_shader.vert  exp.cpp  game_object.h
lib/: shader.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb_image/src/: stb_image.cpp
